# getset

./: Cargo.toml  LICENSE  PLAN.md  README.md  example-fail.toml  example-fail.yaml  example-input.yaml  example-multiline.toml  example-multiline.yaml  example-slow.yaml  example.yaml
.github/workflows/: ci.yml  release.yml
examples/: example-input.toml  example-platformx.toml  example-slow.toml  example.toml
src/: cli.rs  config.rs  lib.rs  main.rs  platformx.rs  runner.rs
tests/: integration_tests.rs  toml_parsing_tests.rs
tests/fixtures/: getset.toml  invalid.toml  invalid_config.toml  step-test.toml  valid.toml  valid_config.toml  verbose-test.toml
