[package]
name = "getset"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "getset"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
console = "0.16.1"
pty-process = "0.5.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["io-std", "macros", "rt-multi-thread"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
